syntax = "proto2";

package foo;

message Message {
    required Header header = 1;
    required Body body = 2;
};

message Header {
    required int32 type = 1; 
};

message Body {
    extensions 1 to max;
};

message SimpleResponse {
  required Rc rc = 1;
};

message Rc {
  required int32 ret_code = 1;
  required string ret_message = 2;
}
